# chain-of-thought-agent

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
rag/: index.py  main.py  retrieval.py  server.py
rag/client/: rq_client.py
rag/http:/localhost:6333/: meta.json
rag/http:/localhost:6333/collection/assignment_rag/: storage.sqlite
rag/queues/: worker.py
src/llm/: llm.py
src/schema/: output_schema.py
src/utils/: cot_prompting.py
